--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,11 @@
     <artifactId>selenium-java</artifactId>
     <version>4.20.0</version>
 </dependency>
-
+<dependency>
+    <groupId>io.qameta.allure</groupId>
+    <artifactId>allure-testng</artifactId>
+    <version>2.29.1</version>
+</dependency>
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
