--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.30</version>
+    <scope>provided</scope>
+</dependency>
+
         <!-- Remove JUnit dependency -->
         <!-- <dependency>
             <groupId>junit</groupId>
