--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,18 @@
                     <artifactId>maven-project-info-reports-plugin</artifactId>
                     <version>3.6.1</version>
                 </plugin>
+                <plugin>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.13.0</version>
+    <configuration>
+        <fork>true</fork>
+        <compilerArgs>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+        </compilerArgs>
+        <release>17</release>
+    </configuration>
+</plugin>
             </plugins>
         </pluginManagement>
     </build>
