--- a/pom.xml
+++ b/pom.xml
@@ -148,5 +148,13 @@
 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+    <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+    </plugin>
+    <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+    </plugin>
+</plugins>
     </build>
 </project>
